fixing alignement for about page

--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@ form {
 }*/
 
 .about-section {
-  margin-top: 100px;
+  margin-top: 200px;
 }
 
 section {
